...
}

@Preview(showBackground = true)
@Composable
private fun ResultItemPreview() {
    QRReaderTheme {
        val result = TrashBoxUiState.ScannedResult(text = "aaa")
        ResultItem(
            result = result,
            onRestore = {}
        )
    }
}
...
